--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-2": "^6.11.0",
+    "chai": "^3.5.0",
+    "jsdom": "^9.3.0",
+    "mocha": "^2.5.3",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
