--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "babel-preset-stage-2": "^6.11.0",
     "chai": "^3.5.0",
     "enzyme": "^2.3.0",
+    "exports-loader": "^0.6.3",
+    "imports-loader": "^0.6.5",
+    "install": "^0.8.1",
     "jsdom": "^9.3.0",
     "mocha": "^2.5.3",
     "react-addons-test-utils": "^15.1.0",
@@ -44,7 +47,12 @@
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
+    "react-router": "^2.5.1",
+    "react-router-redux": "^4.0.5",
     "redux": "^3.5.2",
-    "redux-logger": "^2.6.1"
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.1.0",
+    "soundcloud": "^3.1.2",
+    "whatwg-fetch": "^1.0.0"
   }
 }
